# MajdataHub

./: .cnb.yml  .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml  sync.yml  test-build.yml
scripts/: bump-fix.mjs  bump-minor.mjs
src/: App.tsx  main.tsx
src-server/: Cargo.toml
src-server/src/: lib.rs  main.rs  sse.rs
src-server/src/commands/: checksum.rs  file_system.rs  mod.rs  updater.rs
src-server/src/routes/: mod.rs
src-tauri/: Cargo.toml  tauri.build.conf.json  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: checksum.rs  file_system.rs  mod.rs  network.rs  zip.rs
src-tauri/src/routes/: mod.rs
src/api/: client.ts  files.ts
src/components/: GameSettingsCard.tsx  Layout.tsx  LocalCharts.tsx  LocalSkins.tsx  OnlineCharts.tsx  OnlineSkins.tsx  index.ts
src/components/GameSettingsCard/: AudioTab.tsx  DebugTab.tsx  DisplayTab.tsx  GameTab.tsx  IOTab.tsx  JudgeTab.tsx  OnlineTab.tsx  index.ts
src/contexts/: DownloadContext.tsx  PathContext.tsx  UpdateContext.tsx  index.ts
src/hooks/: useAutoUpdate.ts
src/pages/: ChartPage.tsx  GamePage.tsx  SettingPage.tsx  SkinPage.tsx
src/types/: index.ts  settings.ts
src/utils/: hash.ts
