[package]
name = "majdata-hub"
version = "0.5.4"
description = "Majdata Hub - localhost server"
authors = ["KirisameVanilla"]
edition = "2021"

[lib]
name = "majdata_hub_lib"
crate-type = ["rlib"]

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "rt-multi-thread",
  "macros",
] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["stream", "json"] }
zip = "0.6"
futures-util = "0.3"
urlencoding = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "time",
  "local-time",
] }
tracing-appender = "0.2"
chrono = "0.4"
rayon = "1.10"
walkdir = "2"
rust-embed = "8"
mime_guess = "2"
open = "5"
rfd = "0.14"
semver = "1"
